--- a/src/main/resources/templates/userNotFound.html
+++ b/src/main/resources/templates/userNotFound.html
@@ -7,7 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>ERROR!</h1>
-    <a href="/">Go back to Home</a>
+    <h1 data-th-text="'Contact ' + ${userid} + ' not found!'"></h1>
   </body>
 </html>
