--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -16,13 +16,18 @@
         method="POST"
       >
         <label for="name">Name: </label>
-        <input type="text" th:field="*{name}" />
+        <input type="text" th:field="*{name}" required />
 
         <label for="email">Email: </label>
-        <input type="text" th:field="*{email}" />
+        <input type="email" th:field="*{email}" required />
 
         <label for="phoneNumber">Phone number: </label>
-        <input type="text" th:field="*{phoneNumber}" />
+        <input
+          type="tel"
+          pattern="[0-9]{8}"
+          th:field="*{phoneNumber}"
+          required
+        />
 
         <input type="submit" value="Save contact" />
       </form>
