--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>ERROR!</h1>
+    <h2
+      data-th-if="${errorMessage != null}"
+      data-th-text="${errorMessage}"
+    ></h2>
     <a href="/">Go back to Home</a>
   </body>
 </html>
